# llm-gemini-youtube

./: README.md  llm_gemini_youtube.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_gemini_youtube.py
