[project]
name = "llm-gemini-youtube"
version = "0.0.1"
description = "LLM plugin to access Google's Gemini family of models, with support for YouTube URLs"
readme = "README.md"
authors = [{name = "nikkie"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.9"
dependencies = [
    "llm", "google-genai"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/ftnext/llm-gemini-youtube"
Changelog = "https://github.com/ftnext/llm-gemini-youtube/releases"
Issues = "https://github.com/ftnext/llm-gemini-youtube/issues"
CI = "https://github.com/ftnext/llm-gemini-youtube/actions"

[project.entry-points.llm]
gemini_youtube = "llm_gemini_youtube"

[project.optional-dependencies]
test = ["pytest"]
